DAYTW-32 Included llbool.h in llcommon header files and added reference to CMakeLists.txt
# Conflicts:
#	indra/llcommon/llmemory.h
#	indra/llcommon/llmutex.h

--- a/indra/llcommon/CMakeLists.txt
+++ b/indra/llcommon/CMakeLists.txt
@@ -150,6 +150,7 @@ set(llcommon_HEADER_FILES
     llbase32.h
     llbase64.h
     llbitpack.h
+    llbool.h
     llboost.h
     llcallbacklist.h
     llcallstack.h
