DAYTW-34 Replace all occurrences of kokua_icon.icns and kokua_icon.bmp with the corresponding Dayturn icon versions.
The BMP versions are not used by the macOS version of the viewer and shall be removed. There are also remains fo SecondLife icon files to be removed.
TODO: Add the macOS asset catalog of icons to the project and viewer for full support of both Retina displays, and the small and large icons in the Finder.

# Conflicts:
#	indra/newview/CMakeLists.txt
#	indra/newview/icons/release/kokua_icon.bmp
#	indra/newview/icons/release/kokua_icon.icns
#	indra/newview/icons/release/kokua_icon.ico
#	indra/newview/icons/release/kokua_icon.png
#	indra/newview/icons/test/kokua_icon.bmp
#	indra/newview/icons/test/kokua_icon.icns
#	indra/newview/icons/test/kokua_icon.ico
#	indra/newview/icons/test/kokua_icon.png
#	indra/newview/kokua_icon.icns
#	indra/newview/viewer_manifest.py

# Conflicts:
#	indra/newview/viewer_manifest.py

--- a/indra/newview/CMakeLists.txt
+++ b/indra/newview/CMakeLists.txt
@@ -1546,7 +1546,7 @@ if (DARWIN)
 
   # Add resource files to the project.
   set(viewer_RESOURCE_FILES
-    kokua_icon.icns
+    dayturn_icon.icns
     Info-SecondLife.plist
     Kokua.xib/
     # CMake doesn't seem to support Xcode language variants well just yet
@@ -2313,7 +2313,7 @@ if (DARWIN)
   set(product "${VIEWER_CHANNEL}")
   set(MACOSX_EXECUTABLE_NAME "${VIEWER_CHANNEL}")
   set(MACOSX_BUNDLE_INFO_STRING "${VIEWER_CHANNEL}")
-  set(MACOSX_BUNDLE_ICON_FILE "kokua_icon.icns")
+  set(MACOSX_BUNDLE_ICON_FILE "dayturn_icon.icns")
   set(MACOSX_BUNDLE_GUI_IDENTIFIER "Kokua")
   set(MACOSX_BUNDLE_LONG_VERSION_STRING "${VIEWER_CHANNEL} ${VIEWER_SHORT_VERSION}.${VIEWER_VERSION_REVISION}")
   set(MACOSX_BUNDLE_BUNDLE_NAME "Kokua")
