--- a/indra/CMakeLists.txt
+++ b/indra/CMakeLists.txt
@@ -8,6 +8,9 @@ cmake_minimum_required(VERSION 3.8.0 FATAL_ERROR)
 CMAKE_POLICY(SET CMP0038 OLD)
 CMAKE_POLICY(SET CMP0046 OLD)
 
+# As of XCode 12 this no longer defaults sensibly - adopt the fix implemented in CMake 3.18.1
+set(CMAKE_OSX_ARCHITECTURES $(NATIVE_ARCH_ACTUAL) CACHE STRING "Set arch to actual" FORCE)
+
 set(ROOT_PROJECT_NAME "Kokua" CACHE STRING
     "The root project/makefile/solution name. Defaults to Kokua.")
 project(${ROOT_PROJECT_NAME})
