Darwin: eliminate CMP0068 warnings by eliminating an apparently unneccessry directive

--- a/indra/media_plugins/example/CMakeLists.txt
+++ b/indra/media_plugins/example/CMakeLists.txt
@@ -79,7 +79,9 @@ if (DARWIN)
     media_plugin_example
     PROPERTIES
     PREFIX ""
-    BUILD_WITH_INSTALL_RPATH 1
+    # CA: The directive below invokes a CMP0068 warning on later CMAKE versions and appears to have
+    # no actual effect on the output, so comment it
+    # BUILD_WITH_INSTALL_RPATH 1
     INSTALL_NAME_DIR "@executable_path"
     LINK_FLAGS "-exported_symbols_list ${CMAKE_CURRENT_SOURCE_DIR}/../base/media_plugin_base.exp"
   )
