--- a/indra/cmake/CMakeLists.txt
+++ b/indra/cmake/CMakeLists.txt
@@ -102,6 +102,7 @@ set(cmake_SOURCE_FILES
 #    WebKitLibPlugin.cmake
     XmlRpcEpi.cmake
     ZLIB.cmake
+    jemalloc.cmake
     )
 else (LINUX)
 set(cmake_SOURCE_FILES
