KKA-785 Update to complete jemalloc implementation

--- a/indra/cmake/CMakeLists.txt
+++ b/indra/cmake/CMakeLists.txt
@@ -101,6 +101,7 @@ set(cmake_SOURCE_FILES
 #    WebKitLibPlugin.cmake
     XmlRpcEpi.cmake
     ZLIB.cmake
+    jemalloc.cmake
     )
 else (LINUX)
 set(cmake_SOURCE_FILES
