KKA-800 Port over Kitty Barnett's multiple group floaters and right click actions for groups from Catznip along with a UI for the multiple group floaters on Prefs/Kokua/General

--- a/indra/newview/CMakeLists.txt
+++ b/indra/newview/CMakeLists.txt
@@ -289,6 +289,7 @@ set(viewer_SOURCE_FILES
     llfloatergesture.cpp
     llfloatergodtools.cpp
     llfloatergotoline.cpp
+    llfloatergroupactions.cpp
     llfloatergridstatus.cpp
     llfloatergroupbulkban.cpp
     llfloatergroupinvite.cpp
@@ -961,6 +962,7 @@ set(viewer_HEADER_FILES
     llfloatergodtools.h
     llfloatergotoline.h
     llfloatergridstatus.h
+    llfloatergroupactions.h
     llfloatergroupbulkban.h
     llfloatergroupinvite.h
     llfloatergroups.h
