--- a/indra/newview/CMakeLists.txt
+++ b/indra/newview/CMakeLists.txt
@@ -130,11 +130,15 @@ set(viewer_SOURCE_FILES
     ao.cpp
     aoengine.cpp
     aoset.cpp
+    chatbar_as_cmdline.cpp	
+    daeexport.cpp
     exogroupmutelist.cpp
     fscommon.cpp
     fsareasearch.cpp
     fsareasearchmenu.cpp    
     fsexportperms.cpp
+    fsfloateraddtocontactset.cpp
+    fsfloatercontactsetconfiguration.cpp
     fsfloaterexport.cpp
     fsfloaterimport.cpp
     fsfloaterposestand.cpp
@@ -149,8 +153,7 @@ set(viewer_SOURCE_FILES
     fspose.cpp
     fsscrolllistctrl.cpp
     groupchatlistener.cpp
-    chatbar_as_cmdline.cpp	
-    daeexport.cpp
+    lggcontactsets.cpp
     llaccountingcostmanager.cpp
     llaisapi.cpp
     llagent.cpp
@@ -801,12 +804,16 @@ set(viewer_HEADER_FILES
     ao.h
     aoengine.h
     aoset.h
+    chatbar_as_cmdline.h
+    daeexport.h
     exogroupmutelist.h
     floaterhop.h
 	fsareasearch.h
     fsareasearchmenu.h
     fscommon.h
     fsexportperms.h
+    fsfloateraddtocontactset.h
+    fsfloatercontactsetconfiguration.h
     fsfloaterexport.h    
     fsfloaterimport.h
     fsfloaterposestand.h
@@ -821,9 +828,8 @@ set(viewer_HEADER_FILES
     fspose.h
     fsscrolllistctrl.h
     groupchatlistener.h
-    chatbar_as_cmdline.h
     llaccountingcost.h
-    daeexport.h
+    lggcontactsets.h
     llaccountingcostmanager.h
     llaisapi.h
     llagent.h
