Revert "KKA-815 Post merge."
This reverts commit ef96d2084757473bf9f2d121a61ee724dcab5390.

--- a/indra/cmake/CMakeLists.txt
+++ b/indra/cmake/CMakeLists.txt
@@ -76,6 +76,7 @@ set(cmake_SOURCE_FILES
     LLSharedLibs.cmake
     LLTestCommand.cmake
     LLUI.cmake
+    LLVFS.cmake
     LLWindow.cmake
     LLXML.cmake
     Linking.cmake
