--- a/indra/newview/CMakeLists.txt
+++ b/indra/newview/CMakeLists.txt
@@ -137,6 +137,7 @@ set(viewer_SOURCE_FILES
     fscommon.cpp
     fsareasearch.cpp
     fsareasearchmenu.cpp    
+    fsavatarsearchmenu.cpp
     fsexportperms.cpp
     fsfloateraddtocontactset.cpp
     fsfloatercontactsetconfiguration.cpp
@@ -145,7 +146,6 @@ set(viewer_SOURCE_FILES
     fsfloaterposestand.cpp
     fsfloaterprofile.cpp
     fsfloatersearch.cpp
-    fsfloatersearchlegacy.cpp
     fskeywords.cpp
     fsmoneytracker.cpp
     fspanelclassified.cpp
@@ -820,6 +820,8 @@ set(viewer_HEADER_FILES
     floaterhop.h
 	fsareasearch.h
     fsareasearchmenu.h
+    fsavatarsearchmenu.h
+    fsdispatchclassifiedclickthrough.h
     fscommon.h
     fsexportperms.h
     fsfloateraddtocontactset.h
@@ -829,7 +831,6 @@ set(viewer_HEADER_FILES
     fsfloaterposestand.h
     fsfloaterprofile.h
     fsfloatersearch.h
-    fsfloatersearchlegacy.h
     fskeywords.h
     fsmoneytracker.h
     fspanelclassified.h
