DAYTW-32 Fix up the Objective-C code to stage that it will build on Xcode 13.2.1. Remove NSAutoreleasePool craziness that should be log gone, added a main-objc.mm and generally cleaned up things.

--- a/indra/newview/CMakeLists.txt
+++ b/indra/newview/CMakeLists.txt
@@ -1504,6 +1504,7 @@ set_source_files_properties(
    )
 
 if (DARWIN)
+  LIST(APPEND viewer_SOURCE_FILES main-objc.mm)
   LIST(APPEND viewer_SOURCE_FILES llappviewermacosx.cpp)
   LIST(APPEND viewer_SOURCE_FILES llappviewermacosx-objc.mm)
   LIST(APPEND viewer_HEADER_FILES llappviewermacosx-objc.h)
