DAYTW-37  Add back currency support for Opensim - tea

--- a/indra/cmake/CMakeLists.txt
+++ b/indra/cmake/CMakeLists.txt
@@ -84,6 +84,7 @@ set(cmake_SOURCE_FILES
     PulseAudio.cmake
     Python.cmake
     TemplateCheck.cmake
+    Teapot.cmake
     Tut.cmake
     UI.cmake
     UnixInstall.cmake
@@ -170,6 +171,7 @@ set(cmake_SOURCE_FILES
     PulseAudio.cmake
     Python.cmake
     TemplateCheck.cmake
+    Teapot.cmake
     Tut.cmake
     UI.cmake
     UnixInstall.cmake
