--- a/indra/llui/CMakeLists.txt
+++ b/indra/llui/CMakeLists.txt
@@ -15,6 +15,7 @@ include(LLWindow)
 include(LLCoreHttp)
 include(LLFileSystem)
 include(LLXML)
+include(Teapot)
 
 include_directories(
     ${LLCOMMON_INCLUDE_DIRS}
@@ -27,6 +28,7 @@ include_directories(
     ${LLWINDOW_INCLUDE_DIRS}
     ${LLFILESYSTEM_INCLUDE_DIRS}
     ${LLXML_INCLUDE_DIRS}
+    ${TEAPOT_INCLUDE_DIRS}
     ${LIBS_PREBUILD_DIR}/include/hunspell
     )
 include_directories(SYSTEM
@@ -289,6 +291,7 @@ target_link_libraries(llui
     ${LLXUIXML_LIBRARIES}
     ${LLXML_LIBRARIES}
     ${LLMATH_LIBRARIES}
+    ${TEAPOT_LIBRARIES}
     ${HUNSPELL_LIBRARY}
     ${LLMESSAGE_LIBRARIES}
     ${LLCOMMON_LIBRARIES} # must be after llimage, llwindow, llrender
