--- a/indra/llinventory/CMakeLists.txt
+++ b/indra/llinventory/CMakeLists.txt
@@ -9,12 +9,14 @@ include(LLMath)
 include(LLMessage)
 include(LLFileSystem)
 include(LLXML)
+include(Teapot)
 
 include_directories(
     ${LLCOMMON_INCLUDE_DIRS}
     ${LLMATH_INCLUDE_DIRS}
     ${LLMESSAGE_INCLUDE_DIRS}
     ${LLXML_INCLUDE_DIRS}
+    ${TEAPOT_INCLUDE_DIRS}
     )
 
 set(llinventory_SOURCE_FILES
