DAYTW-32 These files are macOS specific.

--- a/indra/llcommon/CMakeLists.txt
+++ b/indra/llcommon/CMakeLists.txt
@@ -274,10 +274,12 @@ set(llcommon_HEADER_FILES
     StackWalker.h
     )
 
+if (DARWIN)
 # <AV:CR>
   list(APPEND llcommon_HEADER_FILES llsys_objc.h)
   list(APPEND llcommon_SOURCE_FILES llsys_objc.mm)
 # </AV:CR>
+endif (DARWIN)
 
 set_source_files_properties(${llcommon_HEADER_FILES}
                             PROPERTIES HEADER_FILE_ONLY TRUE)
