--- a/indra/newview/CMakeLists.txt
+++ b/indra/newview/CMakeLists.txt
@@ -797,7 +797,7 @@ set(viewer_SOURCE_FILES
 	  kokuafloaterstreaminfo.cpp
     )
 
-set(VIEWER_BINARY_NAME "kokua-bin" CACHE STRING
+set(VIEWER_BINARY_NAME "dayturn-bin" CACHE STRING
     "The name of the viewer executable to create.")
 
 set(viewer_HEADER_FILES
@@ -1547,14 +1547,26 @@ if (DARWIN)
   # Add resource files to the project.
   set(viewer_RESOURCE_FILES
     dayturn_icon.icns
-    Info-SecondLife.plist
-    Kokua.xib/
+    Base.lproj/Dayturn.xib
+    Base.lproj/Main.storyboard
     # CMake doesn't seem to support Xcode language variants well just yet
-    English.lproj/InfoPlist.strings
-    English.lproj/language.txt
-    German.lproj/language.txt
-    Japanese.lproj/language.txt
-    Korean.lproj/language.txt
+    da.lproj/Dayturn.strings
+    en.lproj/InfoPlist.strings
+    en.lproj/Dayturn.strings
+    es.lproj/Dayturn.strings
+    fr.lproj/Dayturn.strings
+    ge.lproj/Dayturn.strings
+    hu-HU.lproj/Dayturn.strings
+    it.lproj/Dayturn.strings
+    ja.lproj/Dayturn.strings
+    ko.lproj/Dayturn.strings
+    nl.lproj/Dayturn.strings
+    pl.lproj/Dayturn.strings
+    pt-PT.lproj/Dayturn.strings
+    ru.lproj/Dayturn.strings
+    tr.lproj/Dayturn.strings
+    en-GB.lproj/Dayturn.strings
+    zh-Hans.lproj/Dayturn.strings
     )
   set_source_files_properties(
     ${viewer_RESOURCE_FILES}
@@ -2311,14 +2323,16 @@ if (DARWIN)
   set(MACOSX_EXECUTABLE_NAME "${VIEWER_CHANNEL}")
   set(MACOSX_BUNDLE_INFO_STRING "${VIEWER_CHANNEL}")
   set(MACOSX_BUNDLE_ICON_FILE "dayturn_icon.icns")
-  set(MACOSX_BUNDLE_GUI_IDENTIFIER "Kokua")
+  set(MACOSX_BUNDLE_EXECUTABLE_NAME "Dayturn")
+  set(MACOSX_BUNDLE_GUI_IDENTIFIER "com.dayturn.viewer")
   set(MACOSX_BUNDLE_LONG_VERSION_STRING "${VIEWER_CHANNEL} ${VIEWER_SHORT_VERSION}.${VIEWER_VERSION_REVISION}")
-  set(MACOSX_BUNDLE_BUNDLE_NAME "Kokua")
+  set(MACOSX_BUNDLE_BUNDLE_NAME "Dayturn")
   set(MACOSX_BUNDLE_SHORT_VERSION_STRING "${VIEWER_SHORT_VERSION}")
   set(MACOSX_BUNDLE_BUNDLE_VERSION "${VIEWER_SHORT_VERSION}${VIEWER_MACOSX_PHASE}${VIEWER_REVISION}")
-  set(MACOSX_BUNDLE_COPYRIGHT "Copyright ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â© Linden Research, Inc. 2020")
-  set(MACOSX_BUNDLE_NSMAIN_NIB_FILE "Kokua.nib")
+  set(MACOSX_BUNDLE_COPYRIGHT "Copyright © Geir Nøklebye, Dayturn Viewer for OpenSim, 2017-2022")
+  set(MACOSX_BUNDLE_NSMAIN_NIB_FILE "Dayturn.nib")
   set(MACOSX_BUNDLE_NSPRINCIPAL_CLASS "LLApplication")
+  set(CMAKE_XCODE_ATTRIBUTE_PRODUCT_NAME “Dayturn“)
 
 
   # https://blog.kitware.com/upcoming-in-cmake-2-8-12-osx-rpath-support/
@@ -2328,12 +2342,12 @@ if (DARWIN)
     ${VIEWER_BINARY_NAME}
     PROPERTIES
     OUTPUT_NAME "${product}"
-    # From Contents/MacOS/SecondLife, look in Contents/Frameworks
+        # From Contents/MacOS/SecondLife, look in Contents/Frameworks
     INSTALL_RPATH "@loader_path/../Frameworks"
     # SIGH, as of 2018-05-24 (cmake 3.11.1) the INSTALL_RPATH property simply
     # does not work. Try this:
     LINK_FLAGS "-rpath @loader_path/../Frameworks"
-    MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/Info-SecondLife.plist"
+    MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_SOURCE_DIR}/Base.lproj/Info-Dayturn.plist"
     XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "${MACOSX_BUNDLE_GUI_IDENTIFIER}"
     )
 
@@ -2343,7 +2357,7 @@ if (DARWIN)
   set(VIEWER_APP_XCARCHIVE "${VIEWER_APP_BUNDLE}/../${product}.xcarchive.zip")
 
   configure_file(
-     "${CMAKE_CURRENT_SOURCE_DIR}/Info-SecondLife.plist"
+     "${CMAKE_CURRENT_SOURCE_DIR}/Info-Dayturn.plist.in"
      "${VIEWER_APP_BUNDLE}/Contents/Info.plist"
     )
 
