DAYTW-39 Add entitlement plist for signing, reshuffle Info.plist and add required CFBundleDisplayName, removed unsupported CFBundleSignature, set CFBundleIdentifier directly and update minimum required macOS version

--- a/indra/llplugin/slplugin/CMakeLists.txt
+++ b/indra/llplugin/slplugin/CMakeLists.txt
@@ -59,6 +59,7 @@ else ()
 set_target_properties(SLPlugin
   PROPERTIES
   MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/slplugin_info.plist
+  XCODE_ATTRIBUTE_ENABLE_HARDENED_RUNTIME NO  #set to YES for notarization
   )
 endif ()
 
