--- a/indra/llplugin/slplugin/slplugin_info.plist
+++ b/indra/llplugin/slplugin/slplugin_info.plist
@@ -8,5 +8,7 @@
 	<string>6.0</string>
 	<key>LSUIElement</key>
 	<string>1</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.14.0</string>
 </dict>
 </plist>
