--- a/indra/media_plugins/base/CMakeLists.txt
+++ b/indra/media_plugins/base/CMakeLists.txt
@@ -28,13 +28,12 @@ include_directories(SYSTEM
 
 ### media_plugin_base
 
-if(NOT ADDRESS_SIZE EQUAL 32)
-  if(WINDOWS)
-    ##add_definitions(/FIXED:NO)
-  else(WINDOWS) # not windows therefore gcc LINUX and DARWIN
+
+if(WINDOWS)
+	##add_definitions(/FIXED:NO)
+else(WINDOWS) # not windows therefore DARWIN
     add_definitions(-fPIC)
-  endif(WINDOWS)
-endif(NOT ADDRESS_SIZE EQUAL 32)
+endif(WINDOWS)
 
 set(media_plugin_base_SOURCE_FILES
     media_plugin_base.cpp
