--- a/indra/cmake/CMakeLists.txt
+++ b/indra/cmake/CMakeLists.txt
@@ -91,6 +91,7 @@ set(cmake_SOURCE_FILES
     VisualLeakDetector.cmake
 #    WebKitLibPlugin.cmake
     XmlRpcEpi.cmake
+    xxHash.cmake
     ZLIBNG.cmake
     )
 else (LINUX)
